коммит для чата
