# openapi/openapi.yaml
@@ -2,6 +2,7 @@ openapi: 3.0.0
 info:
   title: Task API
   version: 1.0.0
+
 paths:
   /tasks:
     get:
@@ -17,6 +18,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/Task'
     post:
+      operationId: PostTask
       summary: Create a new task
       tags: [tasks]
       requestBody:
@@ -24,7 +26,16 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Task'
+              type: object
+              required: [task, is_done, user_id]
+              properties:
+                task:
+                  type: string
+                is_done:
+                  type: boolean
+                user_id:
+                  type: integer
+                  format: uint64
       responses:
         '201':
           description: Task created
@@ -76,6 +87,28 @@ paths:
       responses:
         '204':
           description: Task deleted
+
+  /users/{id}/tasks:
+    get:
+      operationId: GetTasksByUserID
+      summary: List tasks for a user
+      tags: [tasks]
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint64
+      responses:
+        '200':
+          description: A list of tasks for user
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
 
   /users:
     get:
@@ -154,6 +187,9 @@ components:
           type: string
         is_done:
           type: boolean
+        user_id:
+          type: integer
+          format: uint64
 
     User:
       type: object
